--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                 <h1 class="about__us--heading">About us</h1>
                 <div class="about__us--btn-group">
                     <div class="group-1">
-                        <button class="btn btn-primary">Our History</button>
+                        <a href="#history"><button class="btn btn-primary">Our History</button></a>
                         <button class="btn btn-primary">Our Vision & Mission</button>
                         <button class="btn btn-primary">The Spirit of YY</button>
                     </div>
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="about__us--info">
-                <div class="info-1 text-container">
+                <div class="info-1 text-container" id="history">
                     <h3 class="mb-2">Our History</h3>
                     <div class="content">
                         <p>In April 2008, Professor Muhammad Yunus visited Germany. A first contact between Grameen and BASF, one of Hans Reitz's clients, was established. Together with Mr. Hambrecht, CEO of BASF, they developed an idea of a Joint Venture between BASF and Grameen.</p>
