--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
         integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
 
 <body>
@@ -50,7 +51,7 @@
     <!-- home page banner -->
     <section class="header-banner">
         <div class="header-banner-content">
-            <h2>The Grameen Creative Lab is an innovative incubator and creative consultancy serving society's most
+            <h2 class="gcl-reveal">The Grameen Creative Lab is an innovative incubator and creative consultancy serving society's most
                 pressing needs through social business</h2>
             <p class="author-title"></p>
         </div>
@@ -112,18 +113,18 @@
         <!-- who we are header -->
         <div class="who-we-are-header">
             <div class="header-content">
-                <h2>Who we are</h2>
+                <h2 class="gcl-reveal">Who we are</h2>
                 <p>We are a diverse, global, committed and passionate team with the mission, inspired by our Co-Founder
                     and Chairman Nobel Peace Laureate Muhammad Yunus, of creating an ecosystem where social business
                     strives to solve the most pressing social and environmental problems of our times.</p>
-                <a href="/">learn more</a>
+                <a href="/" class="gcl-reveal">learn more</a>
             </div>
         </div>
 
         <!-- what we do -->
         <div class="what-we-do-container">
             <div class="what-we-do-header">
-                <h2>What we do</h2>
+                <h2 class="gcl-reveal">What we do</h2>
                 <img src="./assets/icons/ecllipse.svg" alt="">
             </div>
             <div class="what-we-do-body">
@@ -150,8 +151,8 @@
                     </div>
                     <div class="inspire-right">
                         <div class="inspire-image-number">
-                            <div class="leaf-img" id="inspireImg">
-                                <img src="./assets/home_what_we_do_1.png" alt="">
+                            <div class="leaf-img" id="inspireImg" >
+                                <img src="./assets/home_what_we_do_1.png" alt="" class="gcl-reveal">
                             </div>
                             <div class="leaf-title">
                                 <h2>01</h2>
@@ -165,7 +166,7 @@
                     <div class="educate-left">
                         <div class="educate-image-number">
                             <div class="leaf-img" id="educateImg">
-                                <img src="./assets/home_what_we_do_2.png" alt="">
+                                <img src="./assets/home_what_we_do_2.png" alt="" class="gcl-reveal">
                             </div>
                             <div class="leaf-title">
                                 <h2>02</h2>
@@ -208,7 +209,7 @@
                     <div class="create-right">
                         <div class="create-image-number">
                             <div class="leaf-img" id="createImg">
-                                <img src="./assets/home_what_we_do_3.png" alt="">
+                                <img src="./assets/home_what_we_do_3.png" alt="" class="gcl-reveal">
                             </div>
                             <div class="leaf-title">
                                 <h2>03</h2>
@@ -226,7 +227,7 @@
     <section class="our-impact-container" id="ourImpact">
         <div class="impact-header">
             <img src="./assets/icons/right-curve.svg" alt="">
-            <h2>Our impact</h2>
+            <h2 class="gcl-reveal">Our impact</h2>
             <img src="./assets/icons/left-curve.svg" alt="">
         </div>
         <div class="impact-body">
@@ -243,7 +244,7 @@
                 <p>Social business and ideas supported and accelerated</p>
             </div>
         </div>
-        <div class="impact-footer">
+        <div class="impact-footer gcl-reveal">
             <a href="/">discover our project</a>
         </div>
     </section>
@@ -252,16 +253,16 @@
 
     <section class="home-highlight">
         <div class="highlight-header">
-            <h2>Highlights</h2>
+            <h2 class="gcl-reveal">Highlights</h2>
         </div>
         <div class="highlight-body highlight-slider-container">
             <div class="highlight-box">
                 <img src="./assets/highlights.jpg" alt="">.
-                <a href="/">learn more</a>
+                <a href="/" class="gcl-reveal">learn more</a>
             </div>
             <div class="highlight-box">
                 <img src="./assets/highlights.jpg" alt="">
-                <a href="/">learn more</a>
+                <a href="/" class="gcl-reveal">learn more</a>
             </div>
         </div>
     </section>
@@ -270,7 +271,7 @@
 
     <section class="people-say-container">
         <div class="people-say-header">
-            <h2>What people say about us...</h2>
+            <h2 class="gcl-reveal">What people say about us...</h2>
         </div>
         <div class="people-say-body testimony-slider-container">
             <div class="testimony-data">
@@ -316,31 +317,47 @@
 
     <section class="home-partnerships-section">
         <div class="partnership-header">
-            <h2>Who worked with us</h2>
+            <h2 class="gcl-reveal">Who worked with us</h2>
             <p>In the past 10 years various organizations and leaders have joined our ecosystem to create an impact
                 through social business. These are some of many. </p>
         </div>
         <div class="partnership-body">
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/BNPP_LOGO_FR_H_DIGI_RVB.png"
-                        alt=""></a></div>
-            <div class="brand-container"><a href="/"><img
-                        src="./assets/images/brands/KofiAnnanAward-Logo-RZ_Gradient.png" alt=""></a></div>
-            <div class="brand-container"><a href="/"><img
-                        src="./assets/images/brands/R958cc00f9e73dd836e612bc0c0b3a9f6.png" alt=""></a></div>
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/crop_original_albatros.png"
-                        alt=""></a></div>
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/Hec.jpg" alt=""></a></div>
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/Global_Shapers_Logo.svg.png"
-                        alt=""></a></div>
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/erste.svg" alt=""></a></div>
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/otto.svg" alt=""></a></div>
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/MM_rgb_logo.png" alt=""></a></div>
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/Skoll_LOGO_RGB_KEYLINE.png"
-                        alt=""></a></div>
-            <div class="brand-container"><a href="/"><img src="./assets/images/brands/oyw-munich2021-logo-blue-web.png"
-                        alt=""></a></div>
-            <div class="brand-container"><a href="/"><img
-                        src="./assets/images/brands/National_University_of_Singapore_logo_NUS.png" alt=""></a></div>
+            <div class="brand-container">
+                <a href="/" class="gcl-reveal"><img src="./assets/images/brands/BNPP_LOGO_FR_H_DIGI_RVB.png" alt=""></a>
+            </div>
+            <div class="brand-container">
+                <a href="/" class="gcl-reveal"><img src="./assets/images/brands/KofiAnnanAward-Logo-RZ_Gradient.png" alt=""></a>
+            </div>
+            <div class="brand-container">
+                <a href="/" class="gcl-reveal"><img src="./assets/images/brands/R958cc00f9e73dd836e612bc0c0b3a9f6.png" alt=""></a>
+            </div>
+            <div class="brand-container">
+                <a href="/" class="gcl-reveal"><img src="./assets/images/brands/crop_original_albatros.png"alt=""></a>
+            </div>
+            <div class="brand-container">
+                <a href="/" class="gcl-reveal"><img src="./assets/images/brands/Hec.jpg" alt=""></a>
+            </div>
+            <div class="brand-container">
+                <a href="/" class="gcl-reveal"><img src="./assets/images/brands/Global_Shapers_Logo.svg.png" alt=""></a>
+            </div>
+            <div class="brand-container">
+                <a href="/" class="gcl-reveal"><img src="./assets/images/brands/erste.svg" alt=""></a>
+            </div>
+            <div class="brand-container">
+                <a href="/" class="gcl-reveal"><img src="./assets/images/brands/otto.svg" alt=""></a>
+            </div>
+            <div class="brand-container">
+                <a href="/" class="gcl-reveal"><img src="./assets/images/brands/MM_rgb_logo.png" alt=""></a>
+            </div>
+            <div class="brand-container">
+                <a href="/" class="gcl-reveal"><img src="./assets/images/brands/Skoll_LOGO_RGB_KEYLINE.png" alt=""></a>
+            </div>
+            <div class="brand-container">
+                <a href="/" class="gcl-reveal"><img src="./assets/images/brands/oyw-munich2021-logo-blue-web.png" alt=""></a>
+            </div>
+            <div class="brand-container">
+                <a href="/" class="gcl-reveal"><img src="./assets/images/brands/National_University_of_Singapore_logo_NUS.png" alt=""></a>
+            </div>
         </div>
     </section>
 
@@ -396,6 +413,10 @@
     <script src="./js/hoverGrid.js"></script>
     <script src="./js/counterNumber.js"></script>
     <script src="./js/pathLineAnimate.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script>
+        ScrollReveal({ reset: true }).reveal('.gcl-reveal', { duration: 1500, delay: 250 });
+    </script>
 </body>
 
 </html>
