scripts file shifted to frontend folder

--- a/community.html
+++ b/community.html
@@ -169,9 +169,9 @@
 
 
     <!-- scripts -->
-    <script src="./js/navbar.js"></script>
-    <script src="./js/slick.min.js"></script>
-    <script src="./js/customSlick.js"></script>
+    <script src="./frontend/scripts/navbar.js"></script>
+    <script src="./frontend/scripts/slick.min.js"></script>
+    <script src="./frontend/scripts/customSlick.js"></script>
 </body>
 
 </html>
