--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
     </section>
     
     <!-- scripts -->
-    <script src="./js/navbar.js"></script>
+    <script src="./frontend/scripts/navbar.js"></script>
 </body>
 
 </html>
