--- a/press.html
+++ b/press.html
@@ -79,7 +79,7 @@
         </div>
     </section>    
     <!-- scripts -->
-    <script src="./js/navbar.js"></script>
+    <script src="./frontend/scripts/navbar.js"></script>
 </body>
 
 </html>
