--- a/services.html
+++ b/services.html
@@ -315,9 +315,9 @@
     </footer>
 
     <!-- scripts -->
-    <script src="./js/navbar.js"></script>
-    <script src="./js/slick.min.js"></script>
-    <script src="./js/customSlick.js"></script>
+    <script src="./frontend/scripts/navbar.js"></script>
+    <script src="./frontend/scripts/slick.min.js"></script>
+    <script src="./frontend/scripts/customSlick.js"></script>
 </body>
 
 </html>
