--- a/social-business.html
+++ b/social-business.html
@@ -178,6 +178,6 @@
     </footer>
     <!-- FOOTER END -->
 
-    <script src="./js/navbar.js"></script>
+    <script src="./frontend/scripts/navbar.js"></script>
 </body>
 </html>
