--- a/about.html
+++ b/about.html
@@ -258,10 +258,10 @@
     <!-- FOOTER END-->
 
     <!-- scripts -->
-    <script src="./js/navbar.js"></script>
-    <script src="./js/slick.min.js"></script>
-    <script src="./js/customSlick.js"></script>
-    <script src="./js/hoverGrid.js"></script>
-    <script src="./js/counterNumber.js"></script>
+    <script src="./frontend/scripts/navbar.js"></script>
+    <script src="./frontend/scripts/slick.min.js"></script>
+    <script src="./frontend/scripts/customSlick.js"></script>
+    <script src="./frontend/scripts/hoverGrid.js"></script>
+    <script src="./frontend/scripts/counterNumber.js"></script>
 </body>
 </html>
