worked on animation on about page

--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="./frontend/styles/pages/about/about.css">
 
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+
     <title>Document</title>
 </head>
 <body>
@@ -39,7 +41,7 @@
         <!-- FIRST SECTION START -->
         <section class="about__header">
             <div class="about__header--content">
-                <h2 class="about__header--heading">Unleashing the Power of Social Business to Bring Solutions to solve societies most pressing needs</h2>
+                <h2 class="about__header--heading opacity-animation">Unleashing the Power of Social Business to Bring Solutions to solve societies most pressing needs</h2>
             </div>
         </section>
         <!-- FIRST SECTION START -->
@@ -47,14 +49,14 @@
         <!-- ABOUT US SECTION START -->
         <section class="about__us">
             <div class="container-1">
-                <h1 class="about__us--heading">About us</h1>
+                <h1 class="about__us--heading opacity-animation">About us</h1>
                 <div class="about__us--btn-group">
-                    <div class="group-1">
+                    <div class="group-1 opacity-animation">
                         <a href="#history"><button class="btn btn-primary">Our History</button></a>
                         <a href="#vision"><button class="btn btn-primary">Our Vision & Mission</button></a>
                         <a href="#spirit"><button class="btn btn-primary">The Spirit of YY</button></a>
                     </div>
-                    <div class="group-2">
+                    <div class="group-2 opacity-animation">
                         <a href="#contribution"><button class="btn btn-primary">Our Contribution</button></a>
                         <a href="#team"><button class="btn btn-primary">Our Team</button></a>
                         <a href="#family"><button class="btn btn-primary">Our Family</button></a>
@@ -101,9 +103,9 @@
         <!-- CONTRIBUTION SECTION START -->
         <section class="about__contribution container-1" id="contribution">
             <div class="container">
-                <h3>Our Contribution</h3>
-                <p class="text">In providing our services, we contribute to the achievement of Sustainable Development Goals, while always contributing to Professor Yunus' vision of "A World of Three Zeroes: Zero Poverty, Zero Unemployment and Zero Net Carbon Emissions.</p>
-                <div class="logo-container">
+                <h3 class="opacity-animation">Our Contribution</h3>
+                <p class="text opacity-animation">In providing our services, we contribute to the achievement of Sustainable Development Goals, while always contributing to Professor Yunus' vision of "A World of Three Zeroes: Zero Poverty, Zero Unemployment and Zero Net Carbon Emissions.</p>
+                <div class="logo-container opacity-animation">
                     <img src="/frontend/assets/logo/sdg-logo.png" class="logo" alt="SDG logo">
                     <img src="/frontend/assets/logo/zero_club-logo.png" class="logo" alt="zero-club logo">
                 </div>
@@ -113,8 +115,8 @@
 
         <!-- TEAM SECTION START -->
         <section class="about__team container-1" id="team">
-            <h3 class="about__team--heading">Our Team</h3>
-            <div class="about__team--container">
+            <h3 class="about__team--heading opacity-animation">Our Team</h3>
+            <div class="about__team--container opacity-animation">
                 <div class="member">
                     <div class="img-container">
                         <img src="/frontend/assets/images/member-1.png" class="member__img" alt="team member image">
@@ -186,7 +188,7 @@
                     <p class="member__designation">Managing Partner</p>
                 </div>
             </div>
-            <div class="about__team--box">
+            <div class="about__team--box opacity-animation">
                 <button class="btn btn-secondary">join the team</button>
             </div>
         </section>
@@ -194,8 +196,8 @@
 
         <!-- FAMILY SECTION END -->
         <section class="about__family container-1" id="family">
-            <h3 class="about__family--heading">Our family</h3>
-            <div class="about__family--logo-container">
+            <h3 class="about__family--heading opacity-animation">Our family</h3>
+            <div class="about__family--logo-container opacity-animation">
                 <a href="#"><img class="logo" src="/frontend/assets/logo/yunus_centre-logo.png" alt="family logo"></a>
                 <a href="#"><img class="logo" src="/frontend/assets/logo/yunus_environment_hub-logo.png" alt="family logo"></a>
                 <a href="#"><img class="logo" src="/frontend/assets/logo/yunus_social_business-logo.png" alt="family logo"></a>
@@ -261,5 +263,7 @@
     <script src="./frontend/scripts/customSlick.js"></script>
     <script src="./frontend/scripts/hoverGrid.js"></script>
     <script src="./frontend/scripts/counterNumber.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="./frontend/scripts/scrollAnimation.js"></script>
 </body>
 </html>
