--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./frontend/assets/favicon.png">
     <link rel="stylesheet" href="./frontend/styles/pages/home/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,7 +51,7 @@
     <!-- home page banner -->
     <section class="header-banner">
         <div class="header-banner-content">
-            <h2 class="gcl-reveal">The Grameen Creative Lab is an innovative incubator and creative consultancy serving society's most
+            <h2 class="opacity-animation">The Grameen Creative Lab is an innovative incubator and creative consultancy serving society's most
                 pressing needs through social business</h2>
             <p class="author-title"></p>
         </div>
@@ -113,18 +113,18 @@
         <!-- who we are header -->
         <div class="who-we-are-header">
             <div class="header-content">
-                <h2 class="gcl-reveal">Who we are</h2>
+                <h2 class="opacity-animation">Who we are</h2>
                 <p>We are a diverse, global, committed and passionate team with the mission, inspired by our Co-Founder
                     and Chairman Nobel Peace Laureate Muhammad Yunus, of creating an ecosystem where social business
                     strives to solve the most pressing social and environmental problems of our times.</p>
-                <a href="/" class="gcl-reveal">learn more</a>
+                <a href="/" class="opacity-animation">learn more</a>
             </div>
         </div>
 
         <!-- what we do -->
         <div class="what-we-do-container">
             <div class="what-we-do-header">
-                <h2 class="gcl-reveal">What we do</h2>
+                <h2 class="opacity-animation">What we do</h2>
                 <img src="./frontend/assets/icons/ecllipse.svg" alt="">
             </div>
             <div class="what-we-do-body">
@@ -152,7 +152,7 @@
                     <div class="inspire-right">
                         <div class="inspire-image-number">
                             <div class="leaf-img" id="inspireImg" >
-                                <img src="./frontend/assets/home_what_we_do_1.png" alt="" class="gcl-reveal">
+                                <img src="./frontend/assets/home_what_we_do_1.png" alt="" class="opacity-animation">
                             </div>
                             <div class="leaf-title">
                                 <h2>01</h2>
@@ -166,7 +166,7 @@
                     <div class="educate-left">
                         <div class="educate-image-number">
                             <div class="leaf-img" id="educateImg">
-                                <img src="./frontend/assets/home_what_we_do_2.png" alt="" class="gcl-reveal">
+                                <img src="./frontend/assets/home_what_we_do_2.png" alt="" class="opacity-animation">
                             </div>
                             <div class="leaf-title">
                                 <h2>02</h2>
@@ -209,7 +209,7 @@
                     <div class="create-right">
                         <div class="create-image-number">
                             <div class="leaf-img" id="createImg">
-                                <img src="./frontend/assets/home_what_we_do_3.png" alt="" class="gcl-reveal">
+                                <img src="./frontend/assets/home_what_we_do_3.png" alt="" class="opacity-animation">
                             </div>
                             <div class="leaf-title">
                                 <h2>03</h2>
@@ -227,7 +227,7 @@
     <section class="our-impact-container" id="ourImpact">
         <div class="impact-header">
             <img src="./frontend/assets/icons/right-curve.svg" alt="">
-            <h2 class="gcl-reveal">Our impact</h2>
+            <h2 class="opacity-animation">Our impact</h2>
             <img src="./frontend/assets/icons/left-curve.svg" alt="">
         </div>
         <div class="impact-body">
@@ -244,7 +244,7 @@
                 <p>Social business and ideas supported and accelerated</p>
             </div>
         </div>
-        <div class="impact-footer gcl-reveal">
+        <div class="impact-footer opacity-animation">
             <a href="/">discover our project</a>
         </div>
     </section>
@@ -253,16 +253,16 @@
 
     <section class="home-highlight">
         <div class="highlight-header">
-            <h2 class="gcl-reveal">Highlights</h2>
+            <h2 class="opacity-animation">Highlights</h2>
         </div>
         <div class="highlight-body highlight-slider-container">
             <div class="highlight-box">
                 <img src="./frontend/assets/highlights.jpg" alt="">.
-                <a href="/" class="gcl-reveal">learn more</a>
+                <a href="/" class="opacity-animation">learn more</a>
             </div>
             <div class="highlight-box">
                 <img src="./frontend/assets/highlights.jpg" alt="">
-                <a href="/" class="gcl-reveal">learn more</a>
+                <a href="/" class="opacity-animation">learn more</a>
             </div>
         </div>
     </section>
@@ -271,7 +271,7 @@
 
     <section class="people-say-container">
         <div class="people-say-header">
-            <h2 class="gcl-reveal">What people say about us...</h2>
+            <h2 class="opacity-animation">What people say about us...</h2>
         </div>
         <div class="people-say-body testimony-slider-container">
             <div class="testimony-data">
@@ -317,46 +317,46 @@
 
     <section class="home-partnerships-section">
         <div class="partnership-header">
-            <h2 class="gcl-reveal">Who worked with us</h2>
+            <h2 class="opacity-animation">Who worked with us</h2>
             <p>In the past 10 years various organizations and leaders have joined our ecosystem to create an impact
                 through social business. These are some of many. </p>
         </div>
         <div class="partnership-body">
             <div class="brand-container">
-                <a href="/" class="gcl-reveal"><img src="./frontend/assets/images/brands/BNPP_LOGO_FR_H_DIGI_RVB.png" alt=""></a>
+                <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/BNPP_LOGO_FR_H_DIGI_RVB.png" alt=""></a>
             </div>
             <div class="brand-container">
-                <a href="/" class="gcl-reveal"><img src="./frontend/assets/images/brands/KofiAnnanAward-Logo-RZ_Gradient.png" alt=""></a>
+                <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/KofiAnnanAward-Logo-RZ_Gradient.png" alt=""></a>
             </div>
             <div class="brand-container">
-                <a href="/" class="gcl-reveal"><img src="./frontend/assets/images/brands/R958cc00f9e73dd836e612bc0c0b3a9f6.png" alt=""></a>
+                <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/R958cc00f9e73dd836e612bc0c0b3a9f6.png" alt=""></a>
             </div>
             <div class="brand-container">
-                <a href="/" class="gcl-reveal"><img src="./frontend/assets/images/brands/crop_original_albatros.png"alt=""></a>
+                <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/crop_original_albatros.png"alt=""></a>
             </div>
             <div class="brand-container">
-                <a href="/" class="gcl-reveal"><img src="./frontend/assets/images/brands/Hec.jpg" alt=""></a>
+                <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/Hec.jpg" alt=""></a>
             </div>
             <div class="brand-container">
-                <a href="/" class="gcl-reveal"><img src="./frontend/assets/images/brands/Global_Shapers_Logo.svg.png" alt=""></a>
+                <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/Global_Shapers_Logo.svg.png" alt=""></a>
             </div>
             <div class="brand-container">
-                <a href="/" class="gcl-reveal"><img src="./frontend/assets/images/brands/erste.svg" alt=""></a>
+                <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/erste.svg" alt=""></a>
             </div>
             <div class="brand-container">
-                <a href="/" class="gcl-reveal"><img src="./frontend/assets/images/brands/otto.svg" alt=""></a>
+                <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/otto.svg" alt=""></a>
             </div>
             <div class="brand-container">
-                <a href="/" class="gcl-reveal"><img src="./frontend/assets/images/brands/MM_rgb_logo.png" alt=""></a>
+                <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/MM_rgb_logo.png" alt=""></a>
             </div>
             <div class="brand-container">
-                <a href="/" class="gcl-reveal"><img src="./frontend/assets/images/brands/Skoll_LOGO_RGB_KEYLINE.png" alt=""></a>
+                <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/Skoll_LOGO_RGB_KEYLINE.png" alt=""></a>
             </div>
             <div class="brand-container">
-                <a href="/" class="gcl-reveal"><img src="./frontend/assets/images/brands/oyw-munich2021-logo-blue-web.png" alt=""></a>
+                <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/oyw-munich2021-logo-blue-web.png" alt=""></a>
             </div>
             <div class="brand-container">
-                <a href="/" class="gcl-reveal"><img src="./frontend/assets/images/brands/National_University_of_Singapore_logo_NUS.png" alt=""></a>
+                <a href="/" class="opacity-animation"><img src="./frontend/assets/images/brands/National_University_of_Singapore_logo_NUS.png" alt=""></a>
             </div>
         </div>
     </section>
@@ -413,6 +413,8 @@
     <script src="./frontend/scripts/hoverGrid.js"></script>
     <script src="./frontend/scripts/counterNumber.js"></script>
     <script src="./frontend/scripts/pathLineAnimate.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="./frontend/scripts/scrollAnimation.js"></script>
 </body>
 
 </html>
