--- a/community.html
+++ b/community.html
@@ -20,6 +20,7 @@
         integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
 
 <body>
@@ -27,20 +28,20 @@
     <!-- page banner -->
     <section class="community-banner">
         <div class="community-banner-content">
-            <h2>Get the Latest Resources and News on our Work</h2>
-            <p class="author-title"></p>
+            <h2 class="opacity-animation">Get the Latest Resources and News on our Work</h2>
+            <!-- <p class="author-title"></p> -->
         </div>
     </section>
 
     <!-- community headline -->
     <section class="community-headline">
         <div>
-            <h2>Community</h2>
-            <p>Are you an entrepreneur, a social business enthusiast, a social rights activist, an impact investor or a curious
+            <h2 class="opacity-animation">Community</h2>
+            <p class="opacity-animation">Are you an entrepreneur, a social business enthusiast, a social rights activist, an impact investor or a curious
                 individual who is always open to learning new things? Then we are the community you are looking for. Join the
                 Grameen Creative Lab Community to receive updates about our ongoing work, access our knowledge products and
                 resources and network with likeminded individuals and organizations.</p>
-            <a href="/">join</a>
+            <a href="/" class="opacity-animation">join</a>
         </div>
     </section>
 
@@ -172,6 +173,8 @@
     <script src="./frontend/scripts/navbar.js"></script>
     <script src="./frontend/scripts/slick.min.js"></script>
     <script src="./frontend/scripts/customSlick.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="./frontend/scripts/scrollAnimation.js"></script>
 </body>
 
 </html>
